feat: add, update and delete customer and contact
